Change  homework02, index.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div>
           <img src="#" alt="cute monster" />
         </div>
-        <a href="#" target="_blank"
-          >Free (continental) USA shipping on all orders of $100 USD or more!</a
-        >
+        <a href="#" target="_blank">
+          Free (continental) USA shipping on all orders of $100 USD or more!
+        </a>
       </section>
       <!-- /banner -->
       <section class="products">
@@ -153,7 +153,7 @@
     <footer>
       <section class="info">
         <div class="navigation">
-          <h6>Navigation</h6>
+          <h4>Navigation</h4>
           <ul>
             <li>
               <a href="#" target="_blank">About Us</a>
@@ -177,7 +177,7 @@
         </div>
         <!-- /navigation -->
         <div class="customer-info">
-          <h6>Customer Information</h6>
+          <h4>Customer Information</h4>
           <ul>
             <li>
               <a href="#" target="_blank">Contact Us</a>
@@ -201,7 +201,7 @@
         </div>
         <!-- /customer-info -->
         <div class="connect">
-          <h6>Connect</h6>
+          <h4>Connect</h4>
           <form action="#">
             <input type="text" placeholder="Email" />
             <button class="button">Join</button>
