create homework03, fix index.html, create products.html

--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Favorite Store DLK</title>
+    <title>DLK Products</title>
   </head>
   <body>
     <header class="header">
@@ -36,20 +36,18 @@
 
     <!-- MAIN -->
     <main>
-      <section class="banner">
-        <h1 class="banner__heading">THE OOH NOO COLLECTION</h1>
-        <h3 class="banner__titile">Designed in Slovenia</h3>
-        <a href="#" target="_blank" class="button">EXPLORE NOW</a>
-        <div class="banner__innerpic">
-          <img src="#" alt="cute monster" class="banner__img" />
-        </div>
-        <a href="#" target="_blank" class="banner__link">
-          Free (continental) USA shipping on all orders of $100 USD or more!
-        </a>
-      </section>
-      <!-- /banner -->
       <section class="products">
         <h2 class="products__heading">Category Products</h2>
+        <nav class="products__breadcrumb">
+          <ul class="products__breadcrumb-list">
+            <li class="products__breadcrumb-item">
+              <a href="#" class="products__breadcrumb-link">Home</a>
+            </li>
+            <li class="products__breadcrumb-item">
+              <a href="#" class="products__breadcrumb-link">Catalog</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="products__list">
           <li class="products__item">
             <a href="#" target="_blank" class="products__link">APPAREL KIDS</a>
@@ -72,99 +70,26 @@
             >
           </li>
         </ul>
-        <div class="products__arrows">
-          <img src="#" alt="left arrow" class="products__arrows-left" />
-          <img src="#" alt="right arrow" class="products__arrows-right" />
+        <div class="products__disc">
+          <p class="products__text">
+            Interactive doll Zapf Creation Baby Born Sister can drink from a
+            bottle and almost really cry. You can even bathe her, just like a
+            little sister.
+          </p>
+          <p class="products__text">
+            A toy with a height of 43 cm bends its knees, the head rotates, it
+            can stand upright. Such a doll will be an excellent choice for a
+            gift for a girl from 4 years old.
+          </p>
+          <p class="products__text">
+            The set includes a miniature set of fashionable clothes, a
+            hairbrush, a bottle for water, a pair of hairpins and elastic bands
+            for hair, as well as two bracelets: one for the doll, the other for
+            her young mistress.
+          </p>
         </div>
-        <p class="products__text">
-          Modern finds for the modern home. Curated goods by unique designers
-          around the world from fashion to furniture for kids and adults.
-        </p>
       </section>
       <!-- /products -->
-      <section class="delivery">
-        <div class="delivery__innerpic">
-          <img src="#" alt="photo of a girl" class="delivery__img" />
-        </div>
-        <h2 class="delivery__heading">Delivery</h2>
-        <ul class="delivery__list">
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Delivery</a>
-          </li>
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Guarantee</a>
-          </li>
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Credit</a>
-          </li>
-        </ul>
-        <div class="delivery__wraptext">
-          <p class="delivery__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <p class="delivery__text">
-            What started as an outlet to deal with the traumatic loss of my
-            husband, dlk has now become a truly happy place for me and i have
-            you and all of the beautiful designers that we work with to thank!
-          </p>
-        </div>
-        <a href="#" target="_blank" class="button">LEARN MORE</a>
-      </section>
-      <!-- /delivery -->
-      <section class="partners">
-        <h2 class="partners__heading">Our partners</h2>
-        <ul class="partners__list">
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="mail.ru" class="partners__img"
-            /></a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="apple" class="partners__img"
-            /></a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="eltex" class="partners__img"
-            /></a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="owox" class="partners__img"
-            /></a>
-          </li>
-        </ul>
-      </section>
-      <!-- /partners -->
-      <section class="others">
-        <div class="others__design">
-          <h2 class="others__heading">Design Life Kids</h2>
-          <h3 class="others__title">About Us</h3>
-          <p class="others__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <a href="#" target="_blank" class="button">buy now</a>
-        </div>
-        <div class="others__contacts">
-          <h2 class="others__heading">Contacts</h2>
-          <p class="others__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <div>
-            <a href="#" target="_blank" class="others__link">
-              <img src="#" alt="map" class="others__img" />
-            </a>
-          </div>
-        </div>
-      </section>
-      <!-- /others -->
     </main>
     <!-- /MAIN -->
 
