Change homework03, fix classes and closing tags

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <a href="#" target="_blank" class="products__link">SALE</a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link"
-              >APPAREL ADULTS</a
-            >
+            <a href="#" target="_blank" class="products__link">
+              APPAREL ADULTS
+            </a>
           </li>
         </ul>
         <div class="products__arrows">
@@ -118,53 +118,53 @@
         <ul class="partners__list">
           <li class="partners__item">
             <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="mail.ru" class="partners__img"
-            /></a>
+              <img src="#" alt="mail.ru" class="partners__img" />
+            </a>
           </li>
           <li class="partners__item">
             <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="apple" class="partners__img"
-            /></a>
+              <img src="#" alt="apple" class="partners__img" />
+            </a>
           </li>
           <li class="partners__item">
             <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="eltex" class="partners__img"
-            /></a>
+              <img src="#" alt="eltex" class="partners__img" />
+            </a>
           </li>
           <li class="partners__item">
             <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="owox" class="partners__img"
-            /></a>
+              <img src="#" alt="owox" class="partners__img" />
+            </a>
           </li>
         </ul>
       </section>
       <!-- /partners -->
-      <section class="others">
-        <div class="others__design">
-          <h2 class="others__heading">Design Life Kids</h2>
-          <h3 class="others__title">About Us</h3>
-          <p class="others__text">
+      <section class="info">
+        <div class="design">
+          <h2 class="design__heading">Design Life Kids</h2>
+          <h3 class="design__title">About Us</h3>
+          <p class="design__text">
             Some days i feel like i've been working on dlk my entire life and
             there are other days that i am completely shocked that four years
             have flown by. It's simply magical.
           </p>
           <a href="#" target="_blank" class="button">buy now</a>
         </div>
-        <div class="others__contacts">
-          <h2 class="others__heading">Contacts</h2>
-          <p class="others__text">
+        <div class="contacts">
+          <h2 class="contacts_heading">Contacts</h2>
+          <p class="contacts__text">
             Some days i feel like i've been working on dlk my entire life and
             there are other days that i am completely shocked that four years
             have flown by. It's simply magical.
           </p>
           <div>
-            <a href="#" target="_blank" class="others__link">
-              <img src="#" alt="map" class="others__img" />
+            <a href="#" target="_blank" class="contacts__link">
+              <img src="#" alt="map" class="contacts__img" />
             </a>
           </div>
         </div>
       </section>
-      <!-- /others -->
+      <!-- /info -->
     </main>
     <!-- /MAIN -->
 
@@ -180,51 +180,51 @@
               <a href="#" target="_blank" class="footer__link">Blog</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Design Services</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Design Services
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Featured On</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >2018 Holiday Catalog</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                2018 Holiday Catalog
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Shop By Designer</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Shop By Designer
+              </a>
             </li>
           </ul>
         </div>
         <!-- /navigation -->
-        <div class="footer__customer">
+        <div>
           <h4 class="footer__title">Customer footerrmation</h4>
           <ul class="footer__list">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Contact Us</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Sale Exclusions</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Sale Exclusions
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Shipping & Returns</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Shipping & Returns
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Terms & Conditions</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Terms & Conditions
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Privacy Policy</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Privacy Policy
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Search</a>
@@ -232,32 +232,32 @@
           </ul>
         </div>
         <!-- /customer-footer -->
-        <div class="footer__connect">
+        <div>
           <h4 class="footer__title">Connect</h4>
           <form action="#" class="footer__form">
             <input type="text" placeholder="Email" class="footer__input" />
             <button class="button">Join</button>
           </form>
-          <ul class="footer__icons">
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="facebook" class="footer__icon-img"
-              /></a>
+          <ul class="footer__icons icons">
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="facebook" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="twitter" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="twitter" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="Pinterest" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="Pinterest" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="Instagram" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="Instagram" class="icons-img" />
+              </a>
             </li>
           </ul>
         </div>
@@ -268,9 +268,9 @@
             <img src="#" alt="stars" class="footer__stars" />
           </div>
           <p class="footer__text">Copyright © 2018 Dlk • Design Life Kids</p>
-          <a href="#" target="_blank" class="footer__link-dl"
-            >Web Design — Direct Line Development</a
-          >
+          <a href="#" target="_blank" class="footer__link-dl">
+            Web Design — Direct Line Development
+          </a>
         </div>
         <!-- /footer__other-->
       </section>
