--- a/products.html
+++ b/products.html
@@ -38,13 +38,13 @@
     <main>
       <section class="products">
         <h2 class="products__heading">Category Products</h2>
-        <nav class="products__breadcrumb">
-          <ul class="products__breadcrumb-list">
-            <li class="products__breadcrumb-item">
-              <a href="#" class="products__breadcrumb-link">Home</a>
+        <nav class="breadcrumb">
+          <ul class="breadcrumb__list">
+            <li class="breadcrumb__item">
+              <a href="#" class="breadcrumb__link">Home</a>
             </li>
-            <li class="products__breadcrumb-item">
-              <a href="#" class="products__breadcrumb-link">Catalog</a>
+            <li class="breadcrumb__item">
+              <a href="#" class="breadcrumb__link">Catalog</a>
             </li>
           </ul>
         </nav>
@@ -65,12 +65,12 @@
             <a href="#" target="_blank" class="products__link">SALE</a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link"
-              >APPAREL ADULTS</a
-            >
+            <a href="#" target="_blank" class="products__link">
+              APPAREL ADULTS
+            </a>
           </li>
         </ul>
-        <div class="products__disc">
+        <div class="products__desc">
           <p class="products__text">
             Interactive doll Zapf Creation Baby Born Sister can drink from a
             bottle and almost really cry. You can even bathe her, just like a
@@ -105,51 +105,51 @@
               <a href="#" target="_blank" class="footer__link">Blog</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Design Services</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Design Services
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Featured On</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >2018 Holiday Catalog</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                2018 Holiday Catalog
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Shop By Designer</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Shop By Designer
+              </a>
             </li>
           </ul>
         </div>
         <!-- /navigation -->
-        <div class="footer__customer">
+        <div>
           <h4 class="footer__title">Customer footerrmation</h4>
           <ul class="footer__list">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Contact Us</a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Sale Exclusions</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Sale Exclusions
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Shipping & Returns</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Shipping & Returns
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Terms & Conditions</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Terms & Conditions
+              </a>
             </li>
             <li class="footer__item">
-              <a href="#" target="_blank" class="footer__link"
-                >Privacy Policy</a
-              >
+              <a href="#" target="_blank" class="footer__link">
+                Privacy Policy
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Search</a>
@@ -157,32 +157,32 @@
           </ul>
         </div>
         <!-- /customer-footer -->
-        <div class="footer__connect">
+        <div>
           <h4 class="footer__title">Connect</h4>
           <form action="#" class="footer__form">
             <input type="text" placeholder="Email" class="footer__input" />
             <button class="button">Join</button>
           </form>
-          <ul class="footer__icons">
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="facebook" class="footer__icon-img"
-              /></a>
+          <ul class="footer__icons icons">
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="facebook" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="twitter" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="twitter" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="Pinterest" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="Pinterest" class="icons-img" />
+              </a>
             </li>
-            <li class="footer__icon">
-              <a href="#" target="_blank" class="footer__icon-link">
-                <img src="#" alt="Instagram" class="footer__icon-img"
-              /></a>
+            <li class="icons__item">
+              <a href="#" target="_blank" class="icons-link">
+                <img src="#" alt="Instagram" class="icons-img" />
+              </a>
             </li>
           </ul>
         </div>
@@ -193,9 +193,9 @@
             <img src="#" alt="stars" class="footer__stars" />
           </div>
           <p class="footer__text">Copyright © 2018 Dlk • Design Life Kids</p>
-          <a href="#" target="_blank" class="footer__link-dl"
-            >Web Design — Direct Line Development</a
-          >
+          <a href="#" target="_blank" class="footer__link-dl">
+            Web Design — Direct Line Development
+          </a>
         </div>
         <!-- /footer__other-->
       </section>
