--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <a href="#" target="_blank" class="button">buy now</a>
         </div>
         <div class="contacts">
-          <h2 class="contacts_heading">Contacts</h2>
+          <h2 class="contacts__heading">Contacts</h2>
           <p class="contacts__text">
             Some days i feel like i've been working on dlk my entire life and
             there are other days that i am completely shocked that four years
