--- a/toy.html
+++ b/toy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Favorite Store DLK</title>
+    <title>DLK Toy For Kids</title>
     <link rel="stylesheet" href="css/common.css" class="css" />
     <link rel="stylesheet" href="css/style.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -56,135 +56,132 @@
 
     <!-- MAIN -->
     <main>
-      <section class="banner">
-        <h1 class="banner__heading">THE OOH NOO COLLECTION</h1>
-        <h3 class="banner__titile">Designed in Slovenia</h3>
-        <a href="#" target="_blank" class="button">EXPLORE NOW</a>
-        <div class="banner__innerpic">
-          <img src="#" alt="cute monster" class="banner__img" />
+      <section class="toy">
+        <h2 class="toy__heading">Toy for kids</h2>
+        <nav class="breadcrumb">
+          <ul class="breadcrumb__list">
+            <li class="breadcrumb__item">
+              <a href="#" class="breadcrumb__link">Home</a>
+            </li>
+            <li class="breadcrumb__item">
+              <a href="#" class="breadcrumb__link">Catalog</a>
+            </li>
+            <li class="breadcrumb__item">
+              <a href="#" class="breadcrumb__link">Toys</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="toy__choice choice">
+          <ul class="choice__list">
+            <li class="choice__item">
+              <h2 class="choice__title">Cost</h2>
+              <label class="choice__wrap">
+                <input
+                  type="range"
+                  class="choice__range"
+                  min="0"
+                  max="500"
+                  value="50"
+                />
+                <span class="choice__digit-start">0</span>
+                <span class="choice__digit-end">500</span>
+              </label>
+            </li>
+            <li class="choice__item">
+              <h2 class="choice__title">Color</h2>
+              <label class="choice__container">
+                <input type="checkbox" checked="checked" />
+                <span class="choice__checkmark">Black</span>
+              </label>
+              <label class="choice__container">
+                <input type="checkbox" />
+                <span class="choice__checkmark">Blue</span>
+              </label>
+              <label class="choice__container">
+                <input type="checkbox" />
+                <span class="choice__checkmark">Green</span>
+              </label>
+              <label class="choice__container">
+                <input type="checkbox" />
+                <span class="choice__checkmark">White</span>
+              </label>
+            </li>
+            <li class="choice__item">
+              <h2 class="choice__title">Delivery</h2>
+              <label class="choice__container">
+                <input type="radio" />
+                <span class="choice__checkmark">Free shipping</span>
+              </label>
+              <label class="choice__container">
+                <input type="radio" />
+                <span class="choice__checkmark">Fast shipping</span>
+              </label>
+            </li>
+            <li class="choice__item">
+              <h2 class="choice__title">Amount</h2>
+              <a href="#" class="choice__btn">0-5</a>
+              <a href="#" class="choice__btn">10-20</a>
+              <a href="#" class="choice__btn">20-50</a>
+            </li>
+            <li class="choice__item">
+              <a href="#" target="_blank" class="button">Apply</a>
+            </li>
+          </ul>
         </div>
-        <a href="#" target="_blank" class="banner__link">
-          Free (continental) USA shipping on all orders of $100 USD or more!
-        </a>
-      </section>
-      <!-- /banner -->
-      <section class="products">
-        <h2 class="products__heading">Category Products</h2>
-        <ul class="products__list">
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">APPAREL KIDS</a>
+        <ul class="toy__prod">
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">SHARKY BEAN BAG CHAIR COVER</span>
+              <span class="toy__price">$60.00 USD</span>
+            </a>
           </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">HOLIDAY SHOP</a>
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">BRASS DECO FRAMES</span>
+              <span class="toy__price">$66.00 USD</span>
+            </a>
           </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">TOYS</a>
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">CIBO FULL APRON</span>
+              <span class="toy__price">$60.00 USD</span>
+            </a>
           </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">ACCESSORIES</a>
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">GATCHA GATCHA GUMBALL MACHINE</span>
+              <span class="toy__price">$56.00 USD</span>
+            </a>
           </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">SALE</a>
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">CHRISTMAS ADVENT SCENTED CANDLE</span>
+              <span class="toy__price">$29.00 USD</span>
+            </a>
           </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">
-              APPAREL ADULTS
+          <li class="toy__item">
+            <a href="#" target="_blank" class="toy__link">
+              <img src="#" alt="product foto" class="toy__img" />
+              <span class="toy__text">TANGLE SPINNING TEA LIGHT</span>
+              <span class="toy__price">$56.00 USD</span>
             </a>
           </li>
         </ul>
-        <div class="products__arrows">
-          <img src="#" alt="left arrow" class="products__arrows-left" />
-          <img src="#" alt="right arrow" class="products__arrows-right" />
+        <div class="toy__slider">
+          <img src="#" alt="arrow left" class="toy__arrow-left" />
+          <span class="toy__count">1</span>
+          <span class="toy__count">2</span>
+          <span class="toy__count">3</span>
+          <span class="toy__count">4</span>
+          <img src="#" alt="arrow left" class="toy__arrow-right" />
         </div>
-        <p class="products__text">
-          Modern finds for the modern home. Curated goods by unique designers
-          around the world from fashion to furniture for kids and adults.
-        </p>
       </section>
       <!-- /products -->
-      <section class="delivery">
-        <div class="delivery__innerpic">
-          <img src="#" alt="photo of a girl" class="delivery__img" />
-        </div>
-        <h2 class="delivery__heading">Delivery</h2>
-        <ul class="delivery__list">
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Delivery</a>
-          </li>
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Guarantee</a>
-          </li>
-          <li class="delivery__item">
-            <a href="#" target="_blank" class="delivery__link">Credit</a>
-          </li>
-        </ul>
-        <div class="delivery__wraptext">
-          <p class="delivery__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <p class="delivery__text">
-            What started as an outlet to deal with the traumatic loss of my
-            husband, dlk has now become a truly happy place for me and i have
-            you and all of the beautiful designers that we work with to thank!
-          </p>
-        </div>
-        <a href="#" target="_blank" class="button">LEARN MORE</a>
-      </section>
-      <!-- /delivery -->
-      <section class="partners">
-        <h2 class="partners__heading">Our partners</h2>
-        <ul class="partners__list">
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="mail.ru" class="partners__img" />
-            </a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="apple" class="partners__img" />
-            </a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="eltex" class="partners__img" />
-            </a>
-          </li>
-          <li class="partners__item">
-            <a href="#" target="_blank" class="partners__link">
-              <img src="#" alt="owox" class="partners__img" />
-            </a>
-          </li>
-        </ul>
-      </section>
-      <!-- /partners -->
-      <section class="info">
-        <div class="design">
-          <h2 class="design__heading">Design Life Kids</h2>
-          <h3 class="design__title">About Us</h3>
-          <p class="design__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <a href="#" target="_blank" class="button">buy now</a>
-        </div>
-        <div class="contacts">
-          <h2 class="contacts__heading">Contacts</h2>
-          <p class="contacts__text">
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
-          </p>
-          <div>
-            <a href="#" target="_blank" class="contacts__link">
-              <img src="#" alt="map" class="contacts__img" />
-            </a>
-          </div>
-        </div>
-      </section>
-      <!-- /info -->
     </main>
     <!-- /MAIN -->
 
