--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DLK Products</title>
     <link rel="stylesheet" href="css/common.css" class="css" />
-    <link rel="stylesheet" href="css/style.css" class="css" />
+    <link rel="stylesheet" href="css/products.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,7 +32,7 @@
         <img src="#" alt="logo" />
       </div>
       <nav class="header__nav">
-        <ul class="header__list">
+        <ul class="header__list undoted">
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">Blog</a>
           </li>
@@ -68,7 +68,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="products__list">
+        <ul class="products__list undoted">
           <li class="products__item">
             <a href="#" target="_blank" class="products__link">APPAREL KIDS</a>
           </li>
@@ -91,6 +91,7 @@
           </li>
         </ul>
         <div class="products__desc">
+          <h2 class="products__heading">Product Description</h2>
           <p class="products__text">
             Interactive doll Zapf Creation Baby Born Sister can drink from a
             bottle and almost really cry. You can even bathe her, just like a
@@ -117,7 +118,7 @@
       <section class="footer__info">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
-          <ul class="footer__list">
+          <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">About Us</a>
             </li>
@@ -146,8 +147,8 @@
         </div>
         <!-- /navigation -->
         <div>
-          <h4 class="footer__title">Customer footerrmation</h4>
-          <ul class="footer__list">
+          <h4 class="footer__title">Customer Information</h4>
+          <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Contact Us</a>
             </li>
@@ -183,7 +184,7 @@
             <input type="text" placeholder="Email" class="footer__input" />
             <button class="button">Join</button>
           </form>
-          <ul class="footer__icons icons">
+          <ul class="footer__icons icons undoted">
             <li class="icons__item">
               <a href="#" target="_blank" class="icons-link">
                 <img src="#" alt="facebook" class="icons-img" />
