--- a/toy.html
+++ b/toy.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DLK Toy For Kids</title>
     <link rel="stylesheet" href="css/common.css" class="css" />
-    <link rel="stylesheet" href="css/style.css" class="css" />
+    <link rel="stylesheet" href="css/toy.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,7 +32,7 @@
         <img src="#" alt="logo" />
       </div>
       <nav class="header__nav">
-        <ul class="header__list">
+        <ul class="header__list undoted">
           <li class="header__item">
             <a href="#" target="_blank" class="header__link">Blog</a>
           </li>
@@ -59,7 +59,7 @@
       <section class="toy">
         <h2 class="toy__heading">Toy for kids</h2>
         <nav class="breadcrumb">
-          <ul class="breadcrumb__list">
+          <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
               <a href="#" class="breadcrumb__link">Home</a>
             </li>
@@ -72,7 +72,7 @@
           </ul>
         </nav>
         <div class="toy__choice choice">
-          <ul class="choice__list">
+          <ul class="choice__list undoted">
             <li class="choice__item">
               <h2 class="choice__title">Cost</h2>
               <label class="choice__wrap">
@@ -128,7 +128,7 @@
             </li>
           </ul>
         </div>
-        <ul class="toy__prod">
+        <ul class="toy__prod undoted">
           <li class="toy__item">
             <a href="#" target="_blank" class="toy__link">
               <img src="#" alt="product foto" class="toy__img" />
@@ -189,7 +189,7 @@
       <section class="footer__info">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
-          <ul class="footer__list">
+          <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">About Us</a>
             </li>
@@ -218,8 +218,8 @@
         </div>
         <!-- /navigation -->
         <div>
-          <h4 class="footer__title">Customer footerrmation</h4>
-          <ul class="footer__list">
+          <h4 class="footer__title">Customer Information</h4>
+          <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">Contact Us</a>
             </li>
@@ -255,7 +255,7 @@
             <input type="text" placeholder="Email" class="footer__input" />
             <button class="button">Join</button>
           </form>
-          <ul class="footer__icons icons">
+          <ul class="footer__icons icons undoted">
             <li class="icons__item">
               <a href="#" target="_blank" class="icons-link">
                 <img src="#" alt="facebook" class="icons-img" />
